fix: horizontal overflow on mobile to set ox-sizing to all

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -15,6 +15,12 @@ $breakpoints: ('mobile': 'screen and (max-width: 400px)',
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Noto+Sans+JP:wght@400;900&display=swap');
 
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 html {
   width: 100%;
   overflow-x: hidden;
@@ -34,16 +40,12 @@ html {
 body {
   margin: 0;
   color: $color-white;
-  background: $color-black;
-  transition: all 0.5s;
+  background-color: $color-black;
+  font-size: 16px;
   line-height: 1.6;
   font-family: "Montserrat", "Noto Sans JP", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
   cursor: default;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 h1 {
